# EE-B

./: .modules  CMakeLists.txt  FileReader.cpp  FileReader.h  README.md  WorkingFeedbackGUI.pro  analyzerwindow.cpp  analyzerwindow.h  analyzerwindow.ui  chartview.cpp  chartview.h  main.cpp
kiss_fft130/: CMakeLists.txt  mainOLD.cpp
lib/: fftw++.h  fftwIO  gnuplot_i.hpp  seconds.h
src/: #FFTAnalyzer.h#  CMakeLists.txt  FFTAnalyzer.cpp  FFTAnalyzer.h  FeedbackID.cpp  FeedbackID.h  FileReader.cpp  FileReader.h
